packages/core/src/components/modal/modal.scss
/*
 * SPDX-FileCopyrightText: 2024 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

::backdrop {
  background: var(--theme-color-lightbox, #0000008c);
}

:focus-visible {
  outline: none !important;
}

:host {
  display: none;

  dialog {
    --ix-dialog-padding: 1rem;

    margin: 0;
    padding: var(--ix-dialog-padding);
    padding-top: calc(var(--ix-dialog-padding) + var(--ix-safe-area-inset-top));
    padding-bottom: calc(
      var(--ix-dialog-padding) + var(--ix-safe-area-inset-bottom)
    );
    left: 50%;
  }

  dialog::backdrop {
    backdrop-filter: blur(2.7182817459106445px);
  }

  .modal {
    display: flex;
    flex-direction: column;
    position: fixed;
    border: none;
    border-radius: var(--theme-default-border-radius);
    background: var(--theme-modal--background);
    box-shadow: var(--theme-shadow-4);
    color: var(--theme-color-std-text);
    overflow: visible;
    max-height: 80vh;
    pointer-events: all;
    word-wrap: break-word;
  }

  .modal-size-360 {
    width: 22.5rem;
  }

  .modal-size-480 {
    width: 30rem;
  }

  .modal-size-600 {
    width: 37.5rem;
  }

  .modal-size-720 {
    width: 45rem;
  }

  .modal-size-840 {
    width: 52.5rem;
  }

  .modal-size-full-width {
    width: 95%;
  }

  .modal-size-full-screen {
    border-radius: 0;
    left: 0 !important;
    top: 0 !important;
    transform: none !important;
    box-shadow: none;

    --ix-dialog-full-screen-height: calc(
      var(--ix-safe-area-inset-top) + var(--ix-safe-area-inset-bottom)
    );

    width: calc(100% - var(--ix-dialog-padding) * 2);
    min-width: calc(100% - var(--ix-dialog-padding) * 2);
    max-width: calc(100% - var(--ix-dialog-padding) * 2);

    min-height: calc(
      100% - (var(--ix-dialog-padding) * 2) -
        var(--ix-dialog-full-screen-height)
    );
    max-height: calc(
      100% - (var(--ix-dialog-padding) * 2) -
        var(--ix-dialog-full-screen-height)
    );
  }

  dialog.modal-size-full-screen::backdrop {
    background: var(--theme-modal--background);
  }

  .dialog-backdrop {
    display: block;
    position: fixed;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;

    pointer-events: none;
  }

  ::slotted(ix-modal-footer) {
    margin-top: auto;
  }
}

:host(.visible) {
  display: block;
}

:host(.align-center) {
  dialog {
    margin: 0;
    left: 50%;
    top: 50%;
  }
}

:host(.no-backdrop) {
  dialog::backdrop {
    background-color: transparent !important;
    backdrop-filter: none !important;
  }
}

:host(.with-icon) {
  ::slotted(ix-modal-footer),
  ::slotted(ix-modal-content) {
    margin-left: 3rem;
  }
}

